[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["pgtrigger"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "pytest.mark.skip",
    "@(typing\\.)?overload",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 100
omit = ["pgtrigger/tests/migrations/*"]

[tool.poetry]
name = "django-pgtrigger"
packages = [
  { include = "pgtrigger" }
]
exclude = [
  "*/tests/"
]
version = "4.11.1"
description = "Postgres trigger support integrated with Django models."
authors = ["Wes Kendall"]
classifiers = [
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Django",
  
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/Opus10/django-pgtrigger"
repository = "https://github.com/Opus10/django-pgtrigger"
documentation = "https://django-pgtrigger.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
django = ">=3"

[tool.poetry.dev-dependencies]
git-tidy = "1.2.0"
pytest = "7.4.2"
pytest-cov = "4.1.0"
pytest-dotenv = "0.5.2"
pytest-django = "4.5.2"
pytest-mock = "3.14.0"
pytest-order = "1.1.0"
django-dynamic-fixture = "4.0.1"
django-postgres-extra = "2.0.4"
tox = "4.11.3"
ruff = "0.3.7"
pyright = "1.1.358"
mkdocs = "1.5.3"
black = "24.4.0"
mkdocs-material = "9.5.18"
mkdocstrings-python = "1.9.2"
footing = "*"
setuptools = "*"
poetry-core = "*"
typing-extensions = "4.11.0"
django-stubs = "4.2.7"
dj-database-url = "2.1.0"
psycopg2-binary = "2.9.9"

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--reuse-db -m 'not independent'"
testpaths = "pgtrigger/tests"
norecursedirs = ".venv"
DJANGO_SETTINGS_MODULE = "test_settings"
markers = [
    "independent: marks tests that should run independently of normal suite"
]

[tool.ruff]
lint.select = ["E", "F", "B", "I", "G", "C4"]
line-length = 99
target-version = "py38"

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/migrations/**",
    "**/tests/**",
]
pythonVersion = "3.8"
typeCheckingMode = "standard"
